# MYSC_OCR

./: .gitignore  AGENTS.md  README.md  config.example.json  pyproject.toml
docs/: 2026-04-29-pii-candidate-generation-wiki.md  release-policy.md
scripts/: apply_openai_reranker_decisions.py  apply_resolution_workbook.py  autoresearch_ocr_loop.py  autoresearch_wiki_reporter.py  build_codex_teacher_distill.py  build_downloads_field_ocr_manifest.py  build_openai_reranker_payloads.py  build_release_gate.py  build_targeted_retry_resolution.py  build_union_fallback_resolution.py  compare_human_eval_reports.py  deepseek_bank_zip_full.py  deepseek_recovery_loop.py  deepseek_targeted_bank_retry.py  draft_codex_teacher_labels.py  evaluate_human_workbook_labels.py  evaluate_ocr_server.py  local_cross_encoder_rerank.py  local_feature_score_rerank.py  local_oss_structured_rerank.py  merge_codex_teacher_labels.py  ocr_bank_zip_full.py  openai_structured_rerank.py  run_candidate_recall_experiment.py  run_downloads_field_ocr_eval.py  run_ocrbench_mini_settlement_eval.py  run_paddleocr_kie_retry.py  run_quant_candidate_smoke_gate.py  summarize_eval_union_fallback.py  summarize_ocrbench_mini_from_practical_outputs.py  summarize_practical_eval_compare.py  summarize_teacher_alignment.py  sweep_ocr_free_running.py  sweep_policy_reranker.py
settlement_tool/: __init__.py  account_policy.py  accounts.py  cli.py  core.py  free_running_gate.py  image_variants.py  kie_evidence.py  ocr.py  ocrbench_v2_bankbook.py  organize.py  privacy.py  teacher_distill.py
tests/: test_account_policy.py  (+29 more)
(+24 files in other folders)
